--- a/ebdjango/.gitignore
+++ b/ebdjango/.gitignore
@@ -1,5 +1,5 @@
-
-# Elastic Beanstalk Files
-.elasticbeanstalk/*
-!.elasticbeanstalk/*.cfg.yml
-!.elasticbeanstalk/*.global.yml
+.idea
+*.pyc
+*.swp
+*.swo
+__pycache__
