--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,24 @@ python:
 install:
   - pip install -r requirements.txt  # Install dependencies
 
+script:
+  - python -m unittest discover  # Replace with the command to run your tests or application
+  - python -m black . --check
+  - python -m flake8 --ignore=E303,E501 --max-line-length=88
+  - python -m coverage run manage.py test
+
+env:
+  global:
+    - AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID
+    - AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY
+
+after_success:
+  coveralls
+deploy:
+  provider: elasticbeanstalk
+  access_key_id: $AWS_ACCESS_KEY_ID
+  secret_access_key: "$AWS_SECRET_ACCESS_KEY"
+  region: "us-east-1"
+  app: "ebdjango"
+  env: "django-project"
+  bucket_name: "elasticbeanstalk-us-west-2-623285752572"
