--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-asgiref==3.4.1
-Django==3.2.22
-pytz==2023.3.post1
-sqlparse==0.4.4
+pip>23.2
+Django>=4.2
+black==22.10.0
+coverage==6.5.0
+coveralls==3.3.1
+flake8==5.0.4
