--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
 script:
    # Replace with the command to run your tests or application
   - python -m black . --check
-  - python -m flake8 --ignore=F401 --max-line-length=88
+  - python -m flake8 --ignore=F401,E501 --max-line-length=88
   - python -m coverage run manage.py test
 
 env:
