eb config travis

--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -2,6 +2,8 @@ branch-defaults:
   default:
     environment: null
     group_suffix: null
+  main:
+    environment: django-env
 global:
   application_name: ebdjango
   branch: null
