--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
 install:
 - pip install -r requirements.txt
 script:
-- python -m black . --check
+- python -m black . 
 - python -m flake8 --ignore=F401,E501 --max-line-length=88
 - python -m coverage run manage.py test
 
